--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          <li> Ansible </li>
          <li> Integración continua: madurez y productividad en el desarrollo de software</li>
          <li> Git y Github</li>
+         <li> Kubernetes</li>
      </ul>
 </body>
 </html>
