Cambiamos de Alura a AluraLatam

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de DevOps en Alura</title>
+     <title> Cursos de DevOps en AluraLatam</title>
 </head>
 <body>
      <ul>
