--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant</li>
          <li> Docker: Creando containetrs sin cabeza</li>
-         <li> Ansible </li>
+         <li> Ansible: Infraestructura como código</li>
          <li> Integración continua: madurez y productividad en el desarrollo de software</li>
          <li> Git y Github</li>
          <li> Kubernetes</li>
