modificando el nombre del curso de Kubernetes (tarea urgente resuelta)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <li> Ansible </li>
          <li> Integración continua: madurez y productividad en el desarrollo de software</li>
          <li> Git y Github</li>
-         <li> Kubernetes</li>
+         <li> Kubernetes: Introducción a la orquesta de containers (tarea urgente)</li>
      </ul>
 </body>
 </html>
